# advent_of_ocaml

./: .editorconfig  .gitignore  LICENSE  README.md  advent_of_ocaml.opam  dune-project  perf.sh
lib/: advent.ml  dune
test/: dune
